--- a/style.css
+++ b/style.css
@@ -320,6 +320,9 @@ button:hover {
         padding: 12px 20px;
         white-space: nowrap;
     }
+    header{
+        display: none;
+    }
 }
 
 
